--- a/src/components/template2/pdf2.css
+++ b/src/components/template2/pdf2.css
@@ -357,6 +357,7 @@
   font-family: 'Arial', sans-serif !important;
   white-space: normal !important;
   word-wrap: break-word !important;
+  text-align: right !important;
 }
 
 /* Custom Section */
